--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+NEXT_PUBLIC_POSTHOG_KEY="PRD-POSTHOG_KEY"
+NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
