--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,4 @@
 # NEXT_PUBLIC_CLIENTVAR="bar"
 NEXT_PUBLIC_POSTHOG_KEY="PRD-POSTHOG_KEY"
 NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
+NODE_ENV="development"
