--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
     "next": "^15.2.3",
     "next-intl": "^4.3.4",
